# osmdc

./: .gitignore  Readme.md  justfile  pyproject.toml
src/osmdc/: __init__.py  aggregate.py  cli.py  config.py  population.py  publish.py
tests/: test_aggregate.py
web/: app.js  index.html
