[project]
name = "osmdc"
version = "0.1.0"
description = "OSM completeness tiles from Overture data aggregated to H3 cells"
authors = [
    { name = "kshitijrajsharma", email = "skshitizraj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "h3>=4.5.0",
    "huggingface-hub>=1.20.1",
]

[project.scripts]
osmdc = "osmdc.cli:main"
osmdc-planet = "osmdc.cli:planet_main"
osmdc-publish = "osmdc.cli:publish_main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "ty>=0.0.53",
]
